--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: compress
 ---
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en-US" }}">
+<html lang="{{ page.lang | default: site.lang | default: "zh-CN" }}">
 
   {% include head.html %}
 
@@ -25,7 +25,7 @@ layout: compress
         <p class="hero__meta">{{ site.tagline }}</p>
       </div>
     </div>
-
+   8
     <main class="site__content">
       <section class="blog">
         <div class="container">
