--- a/_layouts/zixun.html
+++ b/_layouts/zixun.html
@@ -18,6 +18,12 @@ layout: compress
     {% endif %}
 
     {% include header.html %}
+    
+    <div class="hero--small">
+      <div class="hero__wrap">
+        <h1 class="hero__title">{{ page.title }}</h1>
+      </div>
+    </div>
 
       <main class="site__content">
       <section class="blog">
