--- a/_layouts/zixun.html
+++ b/_layouts/zixun.html
@@ -34,7 +34,7 @@ layout: compress
               {% include card.html %}
             {% endfor %}
 
-            <!-- {% include pagination.html %} -->
+            {% include pagination.html %} <!--插入分页-->
           </div>
         </div>
       </section>
