--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@ layout: compress
         <p class="hero__meta">{{ site.tagline }}</p>
       </div>
     </div>
-   8
+   <!--注释掉资讯内容
     <main class="site__content">
       <section class="blog">
         <div class="container">
@@ -35,11 +35,12 @@ layout: compress
               {% include card.html %}
             {% endfor %}
 
-            <!-- {% include pagination.html %} -->
+            {% include pagination.html %} 
           </div>
         </div>
       </section>
     </main>
+    -->
 
     {% include footer.html %}
 
