--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@ layout: compress
       <div class="hero__wrap">
         <h1 class="hero__title">{{ site.headtitle | escape }}</h1>
         <p class="hero__meta">{{ site.tagline }}</p>
+        <a href="/contact" class="label"> 联系我们 </a>
       </div>
     </div>
    <!--注释掉资讯内容
