--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@ layout: compress
 
     {% include header.html %}
 
-    <div class="hero lazyload" data-bg="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.hero_img }}">
+    <!--div class="hero lazyload" data-bg="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.hero_img }}"-->
+    <div class="hero lazyload" data-bg="//anky.cc/apps">
       <div class="hero__wrap">
         <h1 class="hero__title">{{ site.headtitle | escape }}</h1>
         <p class="hero__meta">{{ site.tagline }}</p>
