--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,8 +48,8 @@ layout: compress
               {% if words < 360 %}
                 1 min
               {% else %}
-                {{ words | divided_by:180 }} mins
-            {% endif %} read
+                {{ words | divided_by:180 }} 分钟
+            {% endif %} 阅读时间
         </span>
       </p>
     </div>
