--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,13 @@ layout: compress
       </section>
     </main>
     -->
+    <main class="site__content">
+    <div class="user-details">
+    <h1> My Expertise </h1>
+    <p> Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS. </p>
+    </div>
+
+    </main>
 
     {% include footer.html %}
 
