--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,15 +48,23 @@ layout: compress
           <h1 class="hero__title"> My Expertise </h1>
           <p> Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS. </p>
 
-          <div class="post-list">
-          <div class="post-card">
+        <div class="post-list">
+          <div class="post-card__header">
           <h2>Design</h2>
           <i class="devicon-html5-plain-wordmark"></i>
-          <i class="devicon-bootstrap-plain-wordmark colored"></i>
-          <i class="devicon-sass-original colored"></i>
           <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse. Vinyl XOXO lumbersexual</p>
           </div>
+          <div class="post-card__header">
+          <h2>Design</h2>
+          <i class="devicon-html5-plain-wordmark"></i>
+          <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse. Vinyl XOXO lumbersexual</p>
           </div>
+          <div class="post-card__header">
+          <h2>Design</h2>
+          <i class="devicon-html5-plain-wordmark"></i>
+          <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse. Vinyl XOXO lumbersexual</p>
+          </div>
+        </div>
 
         </div>
       </div>
