--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,20 +49,14 @@ layout: compress
           <p> Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS. </p>
 
         <div class="post-list">
-          <div class="post-card__header">
-          <h2>Design</h2>
-          <i class="devicon-html5-plain-wordmark"></i>
-          <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse. Vinyl XOXO lumbersexual</p>
-          </div>
-          <div class="post-card__header">
-          <h2>Design</h2>
-          <i class="devicon-html5-plain-wordmark"></i>
-          <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse. Vinyl XOXO lumbersexual</p>
-          </div>
-          <div class="post-card__header">
-          <h2>Design</h2>
-          <i class="devicon-html5-plain-wordmark"></i>
-          <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse. Vinyl XOXO lumbersexual</p>
+          <div class="post-card"> 
+            <span class="post-card__label"> </span> 
+            <a class="post-card__inner" href="/getting-started/">
+              <div class="post-card__header">
+                <h2>标题</h2>
+              </div>
+              <p>内容</p>
+            </a>
           </div>
         </div>
 
