--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,9 +53,27 @@ layout: compress
             <span class="post-card__label"> </span> 
             <a class="post-card__inner" href="/getting-started/">
               <div class="post-card__header">
-                <h2>标题</h2>
+                <h2>标题标题标题标题</h2>
               </div>
-              <p>内容</p>
+              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+            </a>
+          </div>
+          <div class="post-card"> 
+            <span class="post-card__label"> </span> 
+            <a class="post-card__inner" href="/getting-started/">
+              <div class="post-card__header">
+                <h2>标题标题标题标题</h2>
+              </div>
+              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+            </a>
+          </div>
+          <div class="post-card"> 
+            <span class="post-card__label"> </span> 
+            <a class="post-card__inner" href="/getting-started/">
+              <div class="post-card__header">
+                <h2>标题标题标题</h2>
+              </div>
+              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
             </a>
           </div>
         </div>
