--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@ layout: compress
 
         <div class="post-list">
           <div class="post-card"> 
-            <span class="post-card__label"> </span> 
+            <span class="post-card__inner"> </span> 
               <div class="post-card__header">
                 <h2>标题标题标题标题</h2>
               </div>
