--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,13 +50,6 @@ layout: compress
 
         <div class="post-list">
           <div class="post-card"> 
-            <span class="post-card__inner"> </span> 
-              <div class="post-card__header">
-                <h2>标题标题标题标题</h2>
-              </div>
-              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
-          </div>
-          <div class="post-card"> 
             <span class="post-card__label"> </span> 
               <div class="post-card__header">
                 <h2>标题标题标题标题</h2>
@@ -65,10 +58,19 @@ layout: compress
           </div>
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
+              <div class="post-card__header">
+                <h2>标题标题标题标题</h2>
+              </div>
+              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+          </div>
+          <div class="post-card"> 
+            <span class="post-card__label"> </span> 
+            <div class="post-card__inner">
               <div class="post-card__header">
                 <h2>标题标题标题</h2>
               </div>
               <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+            </div>
           </div>
         </div>
 
