--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,20 +49,7 @@ layout: compress
           <p> Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS. </p>
 
         <div class="post-list">
-          <div class="post-card"> 
-            <span class="post-card__label"> </span> 
-              <div class="post-card__header">
-                <h2>标题标题标题标题</h2>
-              </div>
-              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
-          </div>
-          <div class="post-card"> 
-            <span class="post-card__label"> </span> 
-              <div class="post-card__header">
-                <h2>标题标题标题标题</h2>
-              </div>
-              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
-          </div>
+          
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
             <div class="post-card__inner">
@@ -72,6 +59,27 @@ layout: compress
               <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
             </div>
           </div>
+
+          <div class="post-card"> 
+            <span class="post-card__label"> </span> 
+            <div class="post-card__inner">
+              <div class="post-card__header">
+                <h2>标题标题标题</h2>
+              </div>
+              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+            </div>
+          </div>
+
+          <div class="post-card"> 
+            <span class="post-card__label"> </span> 
+            <div class="post-card__inner">
+              <div class="post-card__header">
+                <h2>标题标题标题</h2>
+              </div>
+              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+            </div>
+          </div>
+
         </div>
 
         </div>
