--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@ layout: compress
     <main class="site__content">
       <div class="container">
         <div class="page-content">
-          <h1 class="hero__title"> My Expertise </h1>
+          <h1 class="hero__title" align="center"> My Expertise </h1>
           <p> Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS. </p>
 
         <div class="post-list">
