--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@ layout: compress
     <main class="site__content">
       <div class="container">
         <div class="page-content">
-          <h1 class="hero__title" align="center"> My Expertise </h1>
-          <p> Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS. </p>
+          <h1 class="hero__title" align="center"> 我们的服务 </h1>
+          <p> 保持车辆处于最佳状态比想象的要容易！无论您是需要保持干净美观的外表，还是想在人迹罕至的地方享受更好的便利,等等,我们都能满足您的要求。公司专门制造专车专用汽车脚垫,尾箱垫,专车模制挡泥板,以及其他各种产品。可提供保护车辆内部和外部所需的一切,产品均经过精心设计和制造,因此您可以获得产品最高质量、样式和耐用性。 每个产品在经过KONETA最严格的测试和质量控制检查。因此,KONETA产品的使用者不再需要担心车辆的内部整洁问题。同时，公司拥有线下服务商，门店提供汽车精洗、贴膜、改色、改装、隐形车衣等等服务。以独特的方式为客户提供汽车美容养护！Koneta洗护技术为您的爱车提供了关注和细节，为您的爱车提供了便利。Koneta提供随时待命的快速细节，每天提供更全面的五星级服务。 </p>
 
         <div class="post-list">
           
