--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,9 @@ layout: compress
             <span class="post-card__label"> </span> 
             <div class="post-card__inner">
               <div class="post-card__header">
-                <h2>精致洗车</h2>
+                <h2>车身清洁</h2>
               </div>
-              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+              <p>快洗、洁癖精洗、发动机清洗、内饰清洗等。</p>
             </div>
           </div>
 
@@ -64,9 +64,9 @@ layout: compress
             <span class="post-card__label"> </span> 
             <div class="post-card__inner">
               <div class="post-card__header">
-                <h2>车身改色</h2>
+                <h2>汽车贴膜</h2>
               </div>
-              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+              <p>防爆膜、车身改色膜、大灯熏黑膜、车衣、高隔热太阳膜</p>
             </div>
           </div>
 
@@ -74,9 +74,9 @@ layout: compress
             <span class="post-card__label"> </span> 
             <div class="post-card__inner">
               <div class="post-card__header">
-                <h2>隐形车衣</h2>
+                <h2>汽车美容</h2>
               </div>
-              <p>Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.</p>
+              <p>抛光、打蜡、封釉、镀膜、镀晶、烤瓷、液体玻璃等。</p>
             </div>
           </div>
 
