--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,12 @@ layout: compress
           
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
+
+            <figure class="post-card__thumb"> 
+              <img src="https://gw.alipayobjects.com/zos/bmw-prod/881dc458-f20b-407b-947a-95104b5ec82b/k79dm8ih_w144_h144.png"class="blur lazyloaded" alt="Getting Started with Sleek"> 
+            </figure>
+
             <div class="post-card__inner">
-              <img src="https://gw.alipayobjects.com/zos/bmw-prod/881dc458-f20b-407b-947a-95104b5ec82b/k79dm8ih_w144_h144.png" width=“60px” height="60px" align="center">
               <div class="post-card__header">
                 <h2>车身清洁</h2>
               </div>
