--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,9 +53,9 @@ layout: compress
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
 
-            <figure class="post-card__thumb"> 
+            <!--figure class="post-card__thumb"> 
               <img src="https://gw.alipayobjects.com/zos/bmw-prod/881dc458-f20b-407b-947a-95104b5ec82b/k79dm8ih_w144_h144.png"class="blur lazyloaded" alt="Getting Started with Sleek"> 
-            </figure>
+            </figure-->
 
             <div class="post-card__inner">
               <div class="post-card__header">
