--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@ layout: compress
         </div>
         
           <h1 class="hero__title" align="center"> 联系地址 </h1>
-          <p> 山东省临沂市兰山区工业大道与银雀山路交汇西200米路南（柯尼特汽车服务） </p>
+          <p align="center"> 山东省临沂市兰山区工业大道与银雀山路交汇西200米路南（柯尼特汽车服务） </p>
        
        </div>
       </div>
