--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@ layout: compress
         
           <h1 class="hero__title" align="center"> 联系地址 </h1>
           <p align="center"> 山东省临沂市兰山区工业大道与银雀山路交汇西200米路南（柯尼特汽车服务） </p>
-       
+          <a href="/contact" class="btn js-submit" align="center"> 立刻与我们联系 </a>
        </div>
       </div>
     </main>
