--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@ layout: compress
       <div class="hero__wrap">
         <h1 class="hero__title">{{ site.headtitle | escape }}</h1>
         <p class="hero__meta">{{ site.tagline }}</p>
+        <a class="btn" href="/contact"> 联系我们 </a>
       </div>
     </div>
    <!--注释掉资讯内容
@@ -89,7 +90,6 @@ layout: compress
         
           <h1 class="hero__title" align="center"> 联系地址 </h1>
           <p align="center"> 山东省临沂市兰山区工业大道与银雀山路交汇西200米路南（柯尼特汽车服务） </p>
-          <a href="/contact" class="btn js-submit" align="center"> 立刻与我们联系 </a>
        </div>
       </div>
     </main>
