--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,8 @@ layout: compress
             <!--figure class="post-card__thumb"> 
               <img src="https://gw.alipayobjects.com/zos/bmw-prod/881dc458-f20b-407b-947a-95104b5ec82b/k79dm8ih_w144_h144.png"class="blur lazyloaded" alt="Getting Started with Sleek"> 
             </figure-->
+            
+            <figure class="post-card__thumb"> <img src="#" class="blur lazyloaded" alt="Getting Started with Sleek"> <noscript><img src="https://janczizikow.github.io//sleek/assets/img/posts/sleek_thumb.jpg" alt="Getting Started with Sleek"></noscript></figure>
 
             <div class="post-card__inner">
               <div class="post-card__header">
