--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@ layout: compress
               <img src="https://gw.alipayobjects.com/zos/bmw-prod/881dc458-f20b-407b-947a-95104b5ec82b/k79dm8ih_w144_h144.png"class="blur lazyloaded" alt="Getting Started with Sleek"> 
             </figure-->
             
-            <figure class="post-card__thumb"> <img src="#" class="blur lazyloaded" alt="Getting Started with Sleek"> <noscript><img src="https://janczizikow.github.io//sleek/assets/img/posts/sleek_thumb.jpg" alt="Getting Started with Sleek"></noscript></figure>
+            <figure class="post-card__thumb"> <img src="/assets/img/posts/csqx.jpg" class="blur lazyloaded" alt="车身清洗"> </figure>
 
             <div class="post-card__inner">
               <div class="post-card__header">
