--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,8 @@ layout: compress
               <p>快洗、洁癖精洗、发动机清洗、内饰清洗等。</p>
             </div>
           </div>
-
+          
+           <figure class="post-card__thumb"> <img src="/assets/img/posts/cstm.jpg" class="blur lazyloaded" alt="车身清洗"> </figure>
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
             <div class="post-card__inner">
@@ -76,7 +77,8 @@ layout: compress
               <p>防爆膜、车身改色膜、大灯熏黑膜、车衣、高隔热太阳膜</p>
             </div>
           </div>
-
+          
+           <figure class="post-card__thumb"> <img src="/assets/img/posts/qcmr.jpg" class="blur lazyloaded" alt="车身清洗"> </figure>
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
             <div class="post-card__inner">
