--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,6 @@ layout: compress
             </figure-->
             
             <figure class="post-card__thumb"> <img src="/assets/img/posts/csqx.jpg" class="blur lazyloaded" alt="车身清洗"> </figure>
-
             <div class="post-card__inner">
               <div class="post-card__header">
                 <h2>车身清洁</h2>
@@ -67,9 +66,9 @@ layout: compress
             </div>
           </div>
           
-           <figure class="post-card__thumb"> <img src="/assets/img/posts/cstm.jpg" class="blur lazyloaded" alt="车身清洗"> </figure>
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
+            <figure class="post-card__thumb"> <img src="/assets/img/posts/cstm.jpg" class="blur lazyloaded" alt="汽车贴膜"> </figure>
             <div class="post-card__inner">
               <div class="post-card__header">
                 <h2>汽车贴膜</h2>
@@ -78,9 +77,10 @@ layout: compress
             </div>
           </div>
           
-           <figure class="post-card__thumb"> <img src="/assets/img/posts/qcmr.jpg" class="blur lazyloaded" alt="车身清洗"> </figure>
+          
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
+            <figure class="post-card__thumb"> <img src="/assets/img/posts/qcmr.jpg" class="blur lazyloaded" alt="汽车美容"> </figure>
             <div class="post-card__inner">
               <div class="post-card__header">
                 <h2>汽车美容</h2>
