--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@ layout: compress
           
           <div class="post-card"> 
             <span class="post-card__label"> </span> 
-            <figure class="post-card__thumb"> <img src="/assets/img/posts/cstm.jpg" class="blur lazyloaded" alt="汽车贴膜"> </figure>
+            <figure class="post-card__thumb"> <img src="/assets/img/posts/gstm.jpg" class="blur lazyloaded" alt="汽车贴膜"> </figure>
             <div class="post-card__inner">
               <div class="post-card__header">
                 <h2>汽车贴膜</h2>
