--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@ layout: compress
     {% include header.html %}
 
     <!--div class="hero lazyload" data-bg="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.hero_img }}"-->
-    <div class="hero lazyload" data-bg="/assets/img/posts/bj.jpg">
+    <div class="hero lazyload" data-bg="https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN">
       <div class="hero__wrap">
         <h1 class="hero__title">{{ site.headtitle | escape }}</h1>
         <p class="hero__meta">{{ site.tagline }}</p>
